fix variants of searchfield close button for toolbar with modal tabs (button/non button wrapped)

--- a/src/components/searchfield/_searchfield.scss
+++ b/src/components/searchfield/_searchfield.scss
@@ -554,3 +554,23 @@ html[dir='rtl'] {
     }
   }
 }
+
+/**
+ * targets toolbar searchfield inside of a tab container,
+ * with variant that does not have a button
+ */
+.tab-container.module-tabs > .toolbar > .buttonset {
+  > .searchfield-wrapper.toolbar-searchfield-wrapper > svg.icon.close {
+    transform: translateY(0%);
+  }
+}
+
+/**
+ * targets toolbar searchfield close button inside of
+ * a tab container, with variant wrapped in button
+ */
+.tab-container > .toolbar > .buttonset {
+  > .searchfield-wrapper.toolbar-searchfield-wrapper > .btn-icon.close {
+    top: -4px;
+  }
+}
